Add 10 template cards

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -808,6 +808,176 @@
                 </label>
             </div>
 
+            <div class="achievement-card" data-name="name">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="achievements/template.html">namename</a>
+                        </h3>
+                        <span class="achievement-percentage">percent%</span>
+                    </div>
+                    <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="name-toggle" data-achievement="name"
+                        onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <div class="achievement-card" data-name="name">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="achievements/template.html">namename</a>
+                        </h3>
+                        <span class="achievement-percentage">percent%</span>
+                    </div>
+                    <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="name-toggle" data-achievement="name"
+                        onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <div class="achievement-card" data-name="name">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="achievements/template.html">namename</a>
+                        </h3>
+                        <span class="achievement-percentage">percent%</span>
+                    </div>
+                    <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="name-toggle" data-achievement="name"
+                        onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <div class="achievement-card" data-name="name">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="achievements/template.html">namename</a>
+                        </h3>
+                        <span class="achievement-percentage">percent%</span>
+                    </div>
+                    <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="name-toggle" data-achievement="name"
+                        onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <div class="achievement-card" data-name="name">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="achievements/template.html">namename</a>
+                        </h3>
+                        <span class="achievement-percentage">percent%</span>
+                    </div>
+                    <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="name-toggle" data-achievement="name"
+                        onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <div class="achievement-card" data-name="name">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="achievements/template.html">namename</a>
+                        </h3>
+                        <span class="achievement-percentage">percent%</span>
+                    </div>
+                    <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="name-toggle" data-achievement="name"
+                        onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <div class="achievement-card" data-name="name">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="achievements/template.html">namename</a>
+                        </h3>
+                        <span class="achievement-percentage">percent%</span>
+                    </div>
+                    <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="name-toggle" data-achievement="name"
+                        onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <div class="achievement-card" data-name="name">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="achievements/template.html">namename</a>
+                        </h3>
+                        <span class="achievement-percentage">percent%</span>
+                    </div>
+                    <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="name-toggle" data-achievement="name"
+                        onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <div class="achievement-card" data-name="name">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="achievements/template.html">namename</a>
+                        </h3>
+                        <span class="achievement-percentage">percent%</span>
+                    </div>
+                    <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="name-toggle" data-achievement="name"
+                        onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <div class="achievement-card" data-name="name">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="achievements/template.html">namename</a>
+                        </h3>
+                        <span class="achievement-percentage">percent%</span>
+                    </div>
+                    <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="name-toggle" data-achievement="name"
+                        onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
             <!-- Progress Bar -->
 
             <div id="completion-status">
