--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -808,18 +808,18 @@
                 </label>
             </div>
 
-            <div class="achievement-card" data-name="name">
+            <div class="achievement-card" data-name="id">
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">namename</a>
+                            <a href="achievements/template.html">Id</a>
                         </h3>
                         <span class="achievement-percentage">percent%</span>
                     </div>
                     <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="name-toggle" data-achievement="name"
+                    <input type="checkbox" id="id-toggle" data-achievement="id"
                         onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
