Add achievement card

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -814,7 +814,7 @@
                         <h3 class="achievement-title">
                             <a href="achievements/template.html">Id</a>
                         </h3>
-                        <span class="achievement-percentage">percent%</span>
+                        <span class="achievement-percentage">62.7%</span>
                     </div>
                     <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
                 </div>
@@ -825,18 +825,18 @@
                 </label>
             </div>
 
-            <div class="achievement-card" data-name="name">
+            <div class="achievement-card" data-name="i-will-survive">
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">namename</a>
+                            <a href="achievements/template.html">I Will Survive</a>
                         </h3>
-                        <span class="achievement-percentage">percent%</span>
+                        <span class="achievement-percentage">61.3%</span>
                     </div>
-                    <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
+                    <p class="achievement-subtitle">Use 50 potions</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="name-toggle" data-achievement="name"
+                    <input type="checkbox" id="i-will-survive-toggle" data-achievement="i-will-survive"
                         onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
