Add achievement card

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -842,18 +842,18 @@
                 </label>
             </div>
 
-            <div class="achievement-card" data-name="name">
+            <div class="achievement-card" data-name="closer-to-the=truth">
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">namename</a>
+                            <a href="achievements/template.html">Closer to the Truth</a>
                         </h3>
-                        <span class="achievement-percentage">percent%</span>
+                        <span class="achievement-percentage">61.3%</span>
                     </div>
-                    <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
+                    <p class="achievement-subtitle">Find 30 archive entries</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="name-toggle" data-achievement="name"
+                    <input type="checkbox" id="closer-to-the=truth-toggle" data-achievement="closer-to-the=truth"
                         onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
