Update ordering and percent

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -819,25 +819,7 @@
                     <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="id-toggle" data-achievement="id"
-                        onchange="toggleAchievement(this)">
-                    <span class="toggle-slider"></span>
-                </label>
-            </div>
-
-            <div class="achievement-card" data-name="i-will-survive">
-                <div class="achievement-container">
-                    <div class="achievement-header">
-                        <h3 class="achievement-title">
-                            <a href="achievements/template.html">I Will Survive</a>
-                        </h3>
-                        <span class="achievement-percentage">61.3%</span>
-                    </div>
-                    <p class="achievement-subtitle">Use 50 potions</p>
-                </div>
-                <label class="toggle-container">
-                    <input type="checkbox" id="i-will-survive-toggle" data-achievement="i-will-survive"
-                        onchange="toggleAchievement(this)">
+                    <input type="checkbox" id="id-toggle" data-achievement="id" onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
             </div>
@@ -859,18 +841,18 @@
                 </label>
             </div>
 
-            <div class="achievement-card" data-name="name">
+            <div class="achievement-card" data-name="i-will-survive">
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">namename</a>
+                            <a href="achievements/template.html">I Will Survive</a>
                         </h3>
-                        <span class="achievement-percentage">percent%</span>
+                        <span class="achievement-percentage">61.2%</span>
                     </div>
-                    <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
+                    <p class="achievement-subtitle">Use 50 potions</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="name-toggle" data-achievement="name"
+                    <input type="checkbox" id="i-will-survive-toggle" data-achievement="i-will-survive"
                         onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
@@ -887,8 +869,7 @@
                     <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="name-toggle" data-achievement="name"
-                        onchange="toggleAchievement(this)">
+                    <input type="checkbox" id="name-toggle" data-achievement="name" onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
             </div>
@@ -904,8 +885,7 @@
                     <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="name-toggle" data-achievement="name"
-                        onchange="toggleAchievement(this)">
+                    <input type="checkbox" id="name-toggle" data-achievement="name" onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
             </div>
@@ -921,8 +901,7 @@
                     <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="name-toggle" data-achievement="name"
-                        onchange="toggleAchievement(this)">
+                    <input type="checkbox" id="name-toggle" data-achievement="name" onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
             </div>
@@ -938,8 +917,7 @@
                     <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="name-toggle" data-achievement="name"
-                        onchange="toggleAchievement(this)">
+                    <input type="checkbox" id="name-toggle" data-achievement="name" onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
             </div>
@@ -955,8 +933,7 @@
                     <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="name-toggle" data-achievement="name"
-                        onchange="toggleAchievement(this)">
+                    <input type="checkbox" id="name-toggle" data-achievement="name" onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
             </div>
@@ -972,8 +949,23 @@
                     <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="name-toggle" data-achievement="name"
-                        onchange="toggleAchievement(this)">
+                    <input type="checkbox" id="name-toggle" data-achievement="name" onchange="toggleAchievement(this)">
+                    <span class="toggle-slider"></span>
+                </label>
+            </div>
+
+            <div class="achievement-card" data-name="name">
+                <div class="achievement-container">
+                    <div class="achievement-header">
+                        <h3 class="achievement-title">
+                            <a href="achievements/template.html">namename</a>
+                        </h3>
+                        <span class="achievement-percentage">percent%</span>
+                    </div>
+                    <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
+                </div>
+                <label class="toggle-container">
+                    <input type="checkbox" id="name-toggle" data-achievement="name" onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
             </div>
