Add achievement card

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -824,7 +824,7 @@
                 </label>
             </div>
 
-            <div class="achievement-card" data-name="closer-to-the=truth">
+            <div class="achievement-card" data-name="closer-to-the-truth">
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
@@ -835,7 +835,7 @@
                     <p class="achievement-subtitle">Find 30 archive entries</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="closer-to-the=truth-toggle" data-achievement="closer-to-the=truth"
+                    <input type="checkbox" id="closer-to-the-truth-toggle" data-achievement="closer-to-the-truth"
                         onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
@@ -858,18 +858,19 @@
                 </label>
             </div>
 
-            <div class="achievement-card" data-name="name">
+            <div class="achievement-card" data-name="knicknack-shack-regular">
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">namename</a>
+                            <a href="achievements/template.html">Knickknack Shack Regular</a>
                         </h3>
-                        <span class="achievement-percentage">percent%</span>
+                        <span class="achievement-percentage">56.3%</span>
                     </div>
-                    <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
+                    <p class="achievement-subtitle">Use Siero's Treasure Trade to complete 10 trades</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="name-toggle" data-achievement="name" onchange="toggleAchievement(this)">
+                    <input type="checkbox" id="knicknack-shack-regular-toggle"
+                        data-achievement="knicknack-shack-regular" onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
             </div>
