Add achievement card

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -886,23 +886,25 @@
                     <p class="achievement-subtitle">Revive allies 5 times</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="field-medic-toggle" data-achievement="field-medic" onchange="toggleAchievement(this)">
+                    <input type="checkbox" id="field-medic-toggle" data-achievement="field-medic"
+                        onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
             </div>
 
-            <div class="achievement-card" data-name="name">
+            <div class="achievement-card" data-name="on-the-house">
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">namename</a>
+                            <a href="achievements/template.html">On The House</a>
                         </h3>
-                        <span class="achievement-percentage">percent%</span>
+                        <span class="achievement-percentage">53.1%</span>
                     </div>
-                    <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
+                    <p class="achievement-subtitle">Get an appraisal from Zathba</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="name-toggle" data-achievement="name" onchange="toggleAchievement(this)">
+                    <input type="checkbox" id="on-the-house-toggle" data-achievement="on-the-house"
+                        onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
             </div>
