Add achievement card

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -909,18 +909,18 @@
                 </label>
             </div>
 
-            <div class="achievement-card" data-name="name">
+            <div class="achievement-card" data-name="a-fateful-farewell">
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">namename</a>
+                            <a href="achievements/template.html">A Fateful Farewell</a>
                         </h3>
-                        <span class="achievement-percentage">percent%</span>
+                        <span class="achievement-percentage">51.0%</span>
                     </div>
-                    <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
+                    <p class="achievement-subtitle">Complete a fate episode epilogue</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="name-toggle" data-achievement="name" onchange="toggleAchievement(this)">
+                    <input type="checkbox" id="a-fateful-farewell-toggle" data-achievement="a-fateful-farewell" onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
             </div>
