Add achievement card

--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -925,18 +925,18 @@
                 </label>
             </div>
 
-            <div class="achievement-card" data-name="name">
+            <div class="achievement-card" data-name="treasure-hunter">
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">namename</a>
+                            <a href="achievements/template.html">Treasure Hunter</a>
                         </h3>
-                        <span class="achievement-percentage">percent%</span>
+                        <span class="achievement-percentage">49.7%</span>
                     </div>
-                    <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
+                    <p class="achievement-subtitle">Opoen 50 treasure chests (excluding town chests)</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="name-toggle" data-achievement="name" onchange="toggleAchievement(this)">
+                    <input type="checkbox" id="treasure-hunter-toggle" data-achievement="treasure-hunter" onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
             </div>
