--- a/gbfr/index.html
+++ b/gbfr/index.html
@@ -920,7 +920,8 @@
                     <p class="achievement-subtitle">Complete a fate episode epilogue</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="a-fateful-farewell-toggle" data-achievement="a-fateful-farewell" onchange="toggleAchievement(this)">
+                    <input type="checkbox" id="a-fateful-farewell-toggle" data-achievement="a-fateful-farewell"
+                        onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
             </div>
@@ -936,23 +937,24 @@
                     <p class="achievement-subtitle">Opoen 50 treasure chests (excluding town chests)</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="treasure-hunter-toggle" data-achievement="treasure-hunter" onchange="toggleAchievement(this)">
+                    <input type="checkbox" id="treasure-hunter-toggle" data-achievement="treasure-hunter"
+                        onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
             </div>
 
-            <div class="achievement-card" data-name="name">
+            <div class="achievement-card" data-name="skybound-heart">
                 <div class="achievement-container">
                     <div class="achievement-header">
                         <h3 class="achievement-title">
-                            <a href="achievements/template.html">namename</a>
+                            <a href="achievements/template.html">Skybound Heart</a>
                         </h3>
-                        <span class="achievement-percentage">percent%</span>
+                        <span class="achievement-percentage">49.2%</span>
                     </div>
-                    <p class="achievement-subtitle">Complete Final Chapter of the main story</p>
+                    <p class="achievement-subtitle">Complete Chapter Ø of the main story</p>
                 </div>
                 <label class="toggle-container">
-                    <input type="checkbox" id="name-toggle" data-achievement="name" onchange="toggleAchievement(this)">
+                    <input type="checkbox" id="skybound-heart-toggle" data-achievement="skybound-heart" onchange="toggleAchievement(this)">
                     <span class="toggle-slider"></span>
                 </label>
             </div>
