Move benched to collector

--- a/terraria/achievements/collector/benched.html
+++ b/terraria/achievements/collector/benched.html
@@ -18,7 +18,7 @@
         [more info]
     </p>
 
-    <div class="achievement-card" data-id="challenger-1">
+    <div class="achievement-card" data-id="Collector-1">
         <h3 class="achievement-name">Benched</h3>
         <p class="achievement-description">
             Craft your first work bench.
@@ -35,7 +35,7 @@
 
     <div class="tips-section">
         <div class="tips-header">
-            <h3 class="tips-title">Challenger Tips</h3>
+            <h3 class="tips-title">Collector Tips</h3>
         </div>
         <div class="tip-item">
         </div>
