Reference new stylesheet

--- a/terraria/achievements/collector/benched.html
+++ b/terraria/achievements/collector/benched.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terraria Achievements - Benched</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -23,13 +23,14 @@
         <p class="achievement-description">
             Craft your first work bench.
         </p>
-        <div class="achievement-meta">
-            <!-- <span class="reward">Reward: [any rewards]</span> -->
+        <div class="top-right-meta">
             <div class="difficulty">
-                Difficulty:
+                <span class="difficulty-label">Difficulty:</span>
                 <span class="difficulty-meter">★☆☆☆☆</span>
             </div>
+            <div class="checkmark-box"></div>
         </div>
+
     </div>
 
 
