Update all templates with new elements/css

--- a/terraria/achievements/collector/timber.html
+++ b/terraria/achievements/collector/timber.html
@@ -19,18 +19,18 @@
     </p>
 
     <div class="achievement-card" data-id="Collector-1">
-        <h3 class="achievement-name">Timber!!</h3>
+        <h3 class="achievement-name">[achievement]</h3>
         <p class="achievement-description">
-            Chop down your first tree.
+            [description].
         </p>
-        <div class="achievement-meta">
-            <!-- <span class="reward">Reward: [any rewards]</span> -->
-            <span class="notes">Notes: Can also be earned by picking up wood from other sources. May be a reference to woodsmen saying Timber!! after cutting down a tree.</span>
+        <div class="top-right-meta">
             <div class="difficulty">
-                Difficulty:
+                <span class="difficulty-label">Difficulty:</span>
                 <span class="difficulty-meter">★☆☆☆☆</span>
             </div>
+            <div class="checkmark-box"></div>
         </div>
+
     </div>
 
 
