--- a/terraria/achievements/explorer/ooo-shiny.html
+++ b/terraria/achievements/explorer/ooo-shiny.html
@@ -21,7 +21,13 @@
     <div class="achievement-card" data-id="explorer-1">
         <div class="achievement-name">
             <h3>Ooo! Shiny!</h3>
-            <div class="difficulty">Difficulty: ★★★☆☆</div>
+        </div>
+        <div class="top-right-meta">
+            <div class="difficulty">
+                <span class="difficulty-label">Difficulty:</span>
+                <span class="difficulty-meter">★☆☆☆☆</span>
+            </div>
+            <div class="checkmark-box"></div>
         </div>
 
         <p class="achievement-description">
