--- a/terraria/achievements/challenger/matching-attire.html
+++ b/terraria/achievements/challenger/matching-attire.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terraria Achievements - Matching Attire</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -18,18 +18,19 @@
         [more info]
     </p>
 
-    <div class="achievement-card" data-id="Collector-1">
-        <h3 class="achievement-name">Matching Attire</h3>
+    <div class="achievement-card" data-id="challenger-1">
+        <h3 class="achievement-name">[achievement]</h3>
         <p class="achievement-description">
-            Equip armor in all three armor slots: head, chest, and feet.
+            [description].
         </p>
-        <div class="achievement-meta">
-            <!-- <span class="reward">Reward: [any rewards]</span> -->
+        <div class="top-right-meta">
             <div class="difficulty">
-                Difficulty:
-                <span class="difficulty-meter">★★☆☆☆</span>
+                <span class="difficulty-label">Difficulty:</span>
+                <span class="difficulty-meter">★☆☆☆☆</span>
             </div>
+            <div class="checkmark-box"></div>
         </div>
+
     </div>
 
 
