--- a/terraria/achievements/challenger/template.html
+++ b/terraria/achievements/challenger/template.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terraria Achievements - [achievement]</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -18,18 +18,19 @@
         [more info]
     </p>
 
-    <div class="achievement-card" data-id="collector-1">
+    <div class="achievement-card" data-id="challenger-1">
         <h3 class="achievement-name">[achievement]</h3>
         <p class="achievement-description">
-            [description]
+            [description].
         </p>
-        <div class="achievement-meta">
-            <!-- <span class="reward">Reward: [any rewards]</span> -->
+        <div class="top-right-meta">
             <div class="difficulty">
-                Difficulty:
-                <span class="difficulty-meter">★★★★☆</span>
+                <span class="difficulty-label">Difficulty:</span>
+                <span class="difficulty-meter">★☆☆☆☆</span>
             </div>
+            <div class="checkmark-box"></div>
         </div>
+
     </div>
 
 
