--- a/terraria/achievements/explorer/i-am-loot.html
+++ b/terraria/achievements/explorer/i-am-loot.html
@@ -19,17 +19,18 @@
     </p>
 
     <div class="achievement-card" data-id="explorer-1">
-        <h3 class="achievement-name">I Am Loot!</h3>
+        <h3 class="achievement-name">[achievement]</h3>
         <p class="achievement-description">
-            Discover a golden chest underground and take a peek at its contents.
+            [description].
         </p>
-        <div class="achievement-meta">
-            <!-- <span class="reward">Reward: [any rewards]</span> -->
+        <div class="top-right-meta">
             <div class="difficulty">
-                Difficulty:
-                <span class="difficulty-meter">★★☆☆☆</span>
+                <span class="difficulty-label">Difficulty:</span>
+                <span class="difficulty-meter">★☆☆☆☆</span>
             </div>
+            <div class="checkmark-box"></div>
         </div>
+
     </div>
 
 
