--- a/terraria/achievements/slayer/template.html
+++ b/terraria/achievements/slayer/template.html
@@ -21,15 +21,16 @@
     <div class="achievement-card" data-id="slayer-1">
         <h3 class="achievement-name">[achievement]</h3>
         <p class="achievement-description">
-            [description]
+            [description].
         </p>
-        <div class="achievement-meta">
-            <!-- <span class="reward">Reward: [any rewards]</span> -->
+        <div class="top-right-meta">
             <div class="difficulty">
-                Difficulty:
-                <span class="difficulty-meter">★★★★☆</span>
+                <span class="difficulty-label">Difficulty:</span>
+                <span class="difficulty-meter">★☆☆☆☆</span>
             </div>
+            <div class="checkmark-box"></div>
         </div>
+
     </div>
 
 
