Add achievement names back in

--- a/terraria/achievements/collector/stop-hammer-time.html
+++ b/terraria/achievements/collector/stop-hammer-time.html
@@ -19,7 +19,7 @@
     </p>
 
     <div class="achievement-card" data-id="Collector-1">
-        <h3 class="achievement-name">[achievement]</h3>
+        <h3 class="achievement-name">Stop! Hammer Time!</h3>
         <p class="achievement-description">
             [description].
         </p>
