--- a/terraria/achievements/challenger/matching-attire.html
+++ b/terraria/achievements/challenger/matching-attire.html
@@ -19,7 +19,7 @@
     </p>
 
     <div class="achievement-card" data-id="challenger-1">
-        <h3 class="achievement-name">[achievement]</h3>
+        <h3 class="achievement-name">Matching Attire</h3>
         <p class="achievement-description">
             [description].
         </p>
