--- a/terraria/achievements/explorer/no-hobo.html
+++ b/terraria/achievements/explorer/no-hobo.html
@@ -19,7 +19,7 @@
     </p>
 
     <div class="achievement-card" data-id="explorer-1">
-        <h3 class="achievement-name">[achievement]</h3>
+        <h3 class="achievement-name">No Hobo</h3>
         <p class="achievement-description">
             [description].
         </p>
