Add achievement descriptionsback in

--- a/terraria/achievements/explorer/you-can-do-it.html
+++ b/terraria/achievements/explorer/you-can-do-it.html
@@ -21,7 +21,7 @@
     <div class="achievement-card" data-id="explorer-1">
         <h3 class="achievement-name">[achievement]</h3>
         <p class="achievement-description">
-            [description].
+            Survive your character's first full night.
         </p>
         <div class="top-right-meta">
             <div class="difficulty">
