--- a/terraria/achievements/challenger/matching-attire.html
+++ b/terraria/achievements/challenger/matching-attire.html
@@ -21,7 +21,7 @@
     <div class="achievement-card" data-id="challenger-1">
         <h3 class="achievement-name">Matching Attire</h3>
         <p class="achievement-description">
-            [description].
+            Equip armor in all three armor slots: head, chest, and feet.
         </p>
         <div class="top-right-meta">
             <div class="difficulty">
