--- a/terraria/achievements/collector/stop-hammer-time.html
+++ b/terraria/achievements/collector/stop-hammer-time.html
@@ -21,7 +21,7 @@
     <div class="achievement-card" data-id="Collector-1">
         <h3 class="achievement-name">Stop! Hammer Time!</h3>
         <p class="achievement-description">
-            [description].
+            Obtain your first hammer via crafting or otherwise.
         </p>
         <div class="top-right-meta">
             <div class="difficulty">
