--- a/terraria/achievements/collector/timber.html
+++ b/terraria/achievements/collector/timber.html
@@ -21,7 +21,7 @@
     <div class="achievement-card" data-id="Collector-1">
         <h3 class="achievement-name">Timber!!</h3>
         <p class="achievement-description">
-            [description].
+            Chop down your first tree.
         </p>
         <div class="top-right-meta">
             <div class="difficulty">
