--- a/terraria/achievements/explorer/i-am-loot.html
+++ b/terraria/achievements/explorer/i-am-loot.html
@@ -21,7 +21,7 @@
     <div class="achievement-card" data-id="explorer-1">
         <h3 class="achievement-name">I Am Loot!</h3>
         <p class="achievement-description">
-            [description].
+            Discover a golden chest underground and take a peek at its contents.
         </p>
         <div class="top-right-meta">
             <div class="difficulty">
