--- a/terraria/achievements/explorer/no-hobo.html
+++ b/terraria/achievements/explorer/no-hobo.html
@@ -21,7 +21,7 @@
     <div class="achievement-card" data-id="explorer-1">
         <h3 class="achievement-name">No Hobo</h3>
         <p class="achievement-description">
-            [description].
+            Build a house suitable enough for your first town NPC, such as the guide, to move into.
         </p>
         <div class="top-right-meta">
             <div class="difficulty">
