--- a/terraria/achievements/collector/benched.html
+++ b/terraria/achievements/collector/benched.html
@@ -30,6 +30,11 @@
             </div>
             <div class="checkmark-box"></div>
         </div>
+        <div class="achievement-meta">
+            <!-- <span class="reward">Reward: [any rewards]</span> -->
+            <span class="notes">Notes: Can also be earned by picking up wood from other sources. May be a reference to
+                woodsmen saying Timber!! after cutting down a tree.</span>
+        </div>
 
     </div>
 
