--- a/terraria/achievements/challenger/template.html
+++ b/terraria/achievements/challenger/template.html
@@ -30,6 +30,10 @@
             </div>
             <div class="checkmark-box"></div>
         </div>
+        <div class="achievement-meta">
+            <!-- <span class="reward">Reward: [any rewards]</span> -->
+            <span class="notes">Notes: [notes].</span>
+        </div>
 
     </div>
 
