Amend notes section for benched

--- a/terraria/achievements/collector/benched.html
+++ b/terraria/achievements/collector/benched.html
@@ -32,8 +32,7 @@
         </div>
         <div class="achievement-meta">
             <!-- <span class="reward">Reward: [any rewards]</span> -->
-            <span class="notes">Notes: Can also be earned by picking up wood from other sources. May be a reference to
-                woodsmen saying Timber!! after cutting down a tree.</span>
+            <span class="notes">Notes: May be a reference to an identical term in sports where a player is 'benched' from the deck play.</span>
         </div>
 
     </div>
