Add notes section for several achievements

--- a/terraria/achievements/challenger/matching-attire.html
+++ b/terraria/achievements/challenger/matching-attire.html
@@ -32,7 +32,7 @@
         </div>
         <div class="achievement-meta">
             <!-- <span class="reward">Reward: [any rewards]</span> -->
-            <span class="notes">Notes: [notes].</span>
+            <span class="notes">Notes: The armor set in the picture is Palladium armor. Does not have to be a matching set.</span>
         </div>
 
     </div>
