--- a/terraria/achievements/collector/timber.html
+++ b/terraria/achievements/collector/timber.html
@@ -32,7 +32,7 @@
         </div>
         <div class="achievement-meta">
             <!-- <span class="reward">Reward: [any rewards]</span> -->
-            <span class="notes">Notes: [notes].</span>
+            <span class="notes">Notes: Can also be earned by picking up wood from other sources. May be a reference to woodsmen saying Timber!! after cutting down a tree.</span>
         </div>
 
     </div>
