--- a/terraria/achievements/explorer/no-hobo.html
+++ b/terraria/achievements/explorer/no-hobo.html
@@ -32,7 +32,7 @@
         </div>
         <div class="achievement-meta">
             <!-- <span class="reward">Reward: [any rewards]</span> -->
-            <span class="notes">Notes: [notes].</span>
+            <span class="notes">Notes: A reference to the phrase 'no homo'.</span>
         </div>
 
     </div>
