--- a/terraria/achievements/collector/stop-hammer-time.html
+++ b/terraria/achievements/collector/stop-hammer-time.html
@@ -32,7 +32,7 @@
         </div>
         <div class="achievement-meta">
             <!-- <span class="reward">Reward: [any rewards]</span> -->
-            <span class="notes">Notes: [notes].</span>
+            <span class="notes">Notes: A reference to a lyric in the MC Hammer song, U Can't Touch This.</span>
         </div>
 
     </div>
