--- a/terraria/achievements/explorer/i-am-loot.html
+++ b/terraria/achievements/explorer/i-am-loot.html
@@ -32,7 +32,7 @@
         </div>
         <div class="achievement-meta">
             <!-- <span class="reward">Reward: [any rewards]</span> -->
-            <span class="notes">Notes: [notes].</span>
+            <span class="notes">Notes: A reference to famous (and only) line 'I Am Groot' from the Guardians of the Galaxy franchise.</span>
         </div>
 
     </div>
