--- a/terraria/achievements/collector/matching-attire.html
+++ b/terraria/achievements/collector/matching-attire.html
@@ -18,7 +18,7 @@
         [more info]
     </p>
 
-    <div class="achievement-card" data-id="challenger-1">
+    <div class="achievement-card" data-id="collector-1">
         <h3 class="achievement-name">Matching Attire</h3>
         <p class="achievement-description">
             Equip armor in all three armor slots: head, chest, and feet.
@@ -32,7 +32,8 @@
         </div>
         <div class="achievement-meta">
             <!-- <span class="reward">Reward: [any rewards]</span> -->
-            <span class="notes">Notes: The armor set in the picture is Palladium armor. Does not have to be a matching set.</span>
+            <span class="notes">Notes: The armor set in the picture is Palladium armor. Does not have to be a matching
+                set.</span>
         </div>
 
     </div>
