--- a/terraria/index.html
+++ b/terraria/index.html
@@ -475,7 +475,7 @@
             filteredAchievements.forEach(achievement => {
                 const isCompleted = completionStatus[achievement.name];
                 const achievementSlug = slugify(achievement.name);
-                const guidePath = `./achievements/${achievementSlug}.html`;
+                const guidePath = `./achievements/${achievement.type}/${achievementSlug}.html`;
 
                 const cardHTML = `
           <div class="achievement-card ${isCompleted ? 'completed' : ''}">
